--- a/tdd.css
+++ b/tdd.css
@@ -1,20 +1,9 @@
 body {
-  background-color: #232526;
-  color: #DEDEDE;
   padding: 20px;
 }
 
 h1, h2, h3, h4 {
   color: #ED5A40;
-}
-
-
-/*ol {*/
-  /*color: #A7E040;*/
-/*}*/
-
-hr {
-  border: 1px solid black;
 }
 
 .story p {
@@ -26,15 +15,10 @@ a, a:link, a:active, a:visited, a:hover {
   color: royalblue;
 }
 
-.problem p {
-  color: lightgray;
+p {
   width: 600px;
 }
 
 #mocha {
   color: #F62D73;
-}
-
-#mocha-stats em {
-  color: white;
 }
